# qml-clipboard-manager

./: CMakeLists.txt  LICENSE  README.md  clipboardmanager.cpp  clipboardmanager.h  clipboardmodel.cpp  clipboardmodel.h  imageutils.cpp  imageutils.h  main.cpp  main.qml
